# lib-derec

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  INSTALL.md  README.md  RELEASE.md  generate_bindings.sh
bindings/dotnet/: InMemoryStores.cs  NuGet.Config  Primitives.cs  Program.cs  Protocol.cs  dotnet.csproj
bindings/node/: index.js.map  package.json
bindings/nodejs/: .gitignore  derec_message.d.ts  derec_message.d.ts.map  derec_message.js  derec_message.js.map  derec_message.ts  index.js  index.js.map  index.ts  package-lock.json  package.json  primitives.ts  protocol.ts
bindings/postgres/: Cargo.toml  docker-compose.yml
bindings/postgres/migrations/: 0001_init.sql
bindings/postgres/src/: codec.rs  db.rs  main.rs  peer.rs  transport.rs
bindings/postgres/src/flows/: assertions.rs  auto_accept.rs  discovery_recovery.rs  helpers.rs  mod.rs  multi_secret.rs  multi_tenancy.rs  multi_vault.rs  pairing.rs  persistence.rs  replica_sync.rs  sharing.rs  unpairing.rs
bindings/postgres/src/stores/: channel.rs  mod.rs  secret.rs  share.rs  user_secret.rs
bindings/rust/: Cargo.toml
bindings/rust/src/: main.rs  primitives.rs  protocol.rs
bindings/sqlite/: Cargo.toml
bindings/sqlite/migrations/: 0001_init.sql
bindings/sqlite/src/: codec.rs  db.rs  main.rs  peer.rs  transport.rs
bindings/sqlite/src/flows/: assertions.rs  auto_accept.rs  discovery_recovery.rs  helpers.rs  mod.rs  multi_secret.rs  multi_tenancy.rs  multi_vault.rs  pairing.rs  persistence.rs  replica_sync.rs  sharing.rs  unpairing.rs
bindings/sqlite/src/stores/: channel.rs  mod.rs  secret.rs  share.rs  user_secret.rs
bindings/web/: index.html  package-lock.json  package.json  vite.config.ts
bindings/web/src/: derec_message.ts  main.ts  primitives.ts  protocol.ts
cryptography/: Cargo.toml  README.md
cryptography/src/: lib.rs  replica.rs
cryptography/src/channel/: mod.rs
cryptography/src/pairing/: envelope.rs  mod.rs  pairing_ecies.rs  pairing_mlkem.rs
cryptography/src/replica/: mod.rs
cryptography/src/vss/: mod.rs  shamir.rs  utils.rs
protobufs/: Cargo.toml  README.md  build.rs  committedderecshare.proto  communicationinfo.proto  contact.proto  derecsecret.proto  error.proto  pair.proto  parameterrange.proto  storeshare.proto  verify.proto
protobufs/protobufs/: committedderecshare.proto  communicationinfo.proto  contact.proto  derecmessage.proto  derecsecret.proto  error.proto  getshare.proto  pair.proto  parameterrange.proto  prepair.proto  replica.proto  result.proto  secretidsversions.proto  storeshare.proto  transportprotocol.proto  unpair.proto  updatechannelinfo.proto  verify.proto
protobufs/src/: lib.rs
scripts/: get-version.sh  prepare-dotnet-package.sh  prepare-nodejs-package.mjs  prepare-web-package.mjs
