[package]
name = "derec-cryptography"
version = "0.0.1-alpha.6"
edition = "2024"
license = "Apache-2.0"
description = "Cryptographic primitives used by the DeRec protocol implementation."
repository = "git+https://github.com/derecalliance/lib-derec"
documentation = "https://derec-alliance.gitbook.io/docs/sdk/rust"
homepage = "https://derecalliance.org"
readme = "README.md"
keywords = ["derec", "decentralized", "cryptography", "secret-sharing", "recovery"]

[dependencies]
sha2 = "0.10.9"
aead = "0.5.2"
aes = "0.8.4"
aes-gcm = "0.10.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
ark-std = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = { version = "0.5.0", default-features = true }
ark-bw6-761 = "0.5.0"
ark-secp256k1 = "0.5.0"
thiserror = "2.0.18"
ml-kem = "0.2.3"

k256 = { version = "0.13.4", features = ["ecdsa"] }

