[package]
name = "derec-cryptography"
version = "0.0.1-alpha.8"
edition = "2024"
license = "Apache-2.0"
description = "Cryptographic primitives used by the DeRec protocol implementation."
repository = "https://github.com/derecalliance/lib-derec"
documentation = "https://derec-alliance.gitbook.io/docs/sdk/rust"
homepage = "https://derec.org"
readme = "README.md"
keywords = ["derec", "decentralized", "cryptography", "secret-sharing", "recovery"]

[features]
logging = ["dep:tracing"]

[dependencies]
tracing = { version = "0.1.44", default-features = false, features = ["attributes"], optional = true }
sha2 = "0.11.0"
aead = "0.6.1"
aes = "0.9.1"
aes-gcm = "0.11.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
ark-std = "0.6.0"
ark-ec = "0.6.0"
ark-ff = "0.6.0"
ark-poly = "0.6.0"
ark-serialize = { version = "0.6.0", default-features = true }
ark-bw6-761 = "0.6.0"
ark-secp256k1 = "0.6.0"
thiserror = "2.0.19"
ml-kem = "0.2.3"
zeroize = { version = "1.9.0", features = ["derive"] }
k256 = { version = "0.14.0", features = ["ecdsa"] }

