[package]
name = "derec-proto"
version = "0.0.1-alpha.8"
edition = "2024"
license = "Apache-2.0"
description = "Generated Rust protobuf types for the DeRec protocol."
repository = "https://github.com/derecalliance/lib-derec"
documentation = "https://docs.rs/derec-proto"
homepage = "https://derec.org"
readme = "README.md"
keywords = ["derec", "recovery", "decentralized", "protobuf", "protocol"]

include = [
  "src/**",
  "build.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "protobufs/**",
]

[dependencies]
prost = "0.14.4"
prost-types = "0.14.4"
serde = { version = "1.0.229", features = ["derive"], optional = true }

[build-dependencies]
prost-build = "0.14.4"

[features]
serde = ["dep:serde"]

