[package]
name = "derec-postgres-binding-smoke-test"
version = "0.1.0"
edition = "2024"

# Self-contained workspace so cargo does not attempt to attach this
# package to the parent repository workspace.
[workspace]

[dependencies]
derec-library = { path = "../../library" }
derec-proto = { path = "../../protobufs" }
prost = "0.14.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-postgres = "0.7"
uuid = { version = "1", features = ["v4"] }
