[package]
name = "derec-postgres-binding-smoke-test"
version = "0.1.0"
edition = "2024"

# Self-contained workspace so cargo does not attempt to attach this
# package to the parent repository workspace.
[workspace]

[dependencies]
derec-library = { path = "../../library", features = ["serde"] }
derec-proto = { path = "../../protobufs" }
prost = "0.14.4"
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["macros", "rt"] }
tokio-postgres = "0.7.18"
uuid = { version = "1.24.0", features = ["v4"] }
