[package]
name = "derec-rust-binding-smoke-test"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
ark-serialize = { version = "0.5.0", default-features = true }
derec-cryptography = { path = "../../cryptography" }
derec-library = { path = "../../library", features = ["primitives"] }
derec-proto = { path = "../../protobufs" }
prost = "0.14.3"
prost-types = "0.14.3"

