[package]
name = "derec-sqlite-binding-smoke-test"
version = "0.1.0"
edition = "2024"

# Self-contained workspace so cargo does not attempt to attach this
# package to the parent repository workspace (which would require
# editing the root `Cargo.toml`). The user-visible expectation is that
# nothing outside `bindings/sqlite/` changes.
[workspace]

[dependencies]
ark-serialize = { version = "0.6.0", default-features = true }
derec-cryptography = { path = "../../cryptography" }
derec-library = { path = "../../library" }
derec-proto = { path = "../../protobufs" }
prost = "0.14.3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
