[package]
name = "derec-sqlite-binding-smoke-test"
version = "0.1.0"
edition = "2024"

# Self-contained workspace so cargo does not attempt to attach this
# package to the parent repository workspace (which would require
# editing the root `Cargo.toml`). The user-visible expectation is that
# nothing outside `bindings/sqlite/` changes.
[workspace]

[dependencies]
derec-library = { path = "../../library", features = ["serde"] }
derec-proto = { path = "../../protobufs" }
prost = "0.14.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["macros", "rt"] }
